[workspace]
members = ["agon-light-emulator-debugger", "agon-ez80-emulator", "agon-cli-emulator"]

[workspace.package]
version = "1.2.2"
edition = "2021"
authors = ["Tom Morton <tomm8086@gmail.com>"]
license = "GPL-3.0"

[package]
name = "fab-agon-emulator"
keywords = ["Agon Light", "Agon Console8", "emulator"]
homepage = "https://github.com/tomm/fab-agon-emulator"
repository = "https://github.com/tomm/fab-agon-emulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

#[package.metadata.system-deps.'cfg(not(target_os = "windows"))']
#sdl3 = "0.14.36"

[dependencies]
sdl3 = "0.14.36"
sdl3-sys = "*"
pico-args = "0.5.0"
agon-ez80-emulator = { workspace = true }
agon-light-emulator-debugger = { workspace = true }
# Same rev as agon-ez80-emulator: lets the control server format eZ80 registers
# (ez80::Reg16) for the /regs endpoint (retro-remote-debug-controller SPEC 0.1).
ez80 = { git = "https://github.com/tomm/ez80.git", rev = "0cc736392919c647995c0ac6a153e4aaef56f3f2" }
libloading = "0.8.0"
home = "0.5.9"
serialport = "4.3.0"

#[target.'cfg(target_os = "macos")'.dependencies]
#sdl3 = { version = "*", features = ["bundled", "static-link"] }

[target.'cfg(target_os = "linux")'.dependencies]
raw_tty = "0.1.0"

[workspace.dependencies]
agon-ez80-emulator = { path = "agon-ez80-emulator" }
agon-light-emulator-debugger = { path = "agon-light-emulator-debugger" }
agon-cli-emulator = { path = "agon-cli-emulator" }
